tests/paczka1/small_fuzzy/93406352.err
Error in line 2: ADs S559 81,6
Error in line 6: S697 S697 50,8
